--- a/gallery.html
+++ b/gallery.html
@@ -154,12 +154,12 @@
                     class="logo_wrapper hidden"
                     href="index.html"
                   >
-                    <img
-                      src="upload/logo1.png"
-                      alt=""
-                      width="180"
-                      height="180"
-                    />
+                  <img
+                  data-no-lazy="1"
+                  class="skip-lazy"
+                  alt="loader image"
+                  src="upload/ImanLogoWhite.png"
+                />
                   </a>
                 </div>
               </div>
