--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                           <li class="menu-item menu-item-has-children">
                             <a href="/gallery.html">Rentals in paris</a>
                             <ul class="sub-menu">
-                                                            <li class="menu-item"><a href="/#Marbeuf">Rue Marbeuf </a></li>
+                                                            <li class="menu-item"><a href="/gallery.html">Rue Marbeuf </a></li>
                                                             <li class="menu-item"><a href="/gallery.html">Rue François</a></li>
                                                                 <li class="menu-item"><a href="/gallery.html">Rue Clément Marot</a></li>
                                                                                                             
