--- a/our-rooms.html
+++ b/our-rooms.html
@@ -217,7 +217,7 @@
                                                                         data-widget_type="heading.default"
                                                                     >
                                                                         <div class="elementor-widget-container">
-                                                                            <h1 style="text-transform: uppercase;" class="elementor-heading-title elementor-size-default">ORDER SERVICE</h1>
+                                                                            <h1 style="text-transform: uppercase;" class="elementor-heading-title elementor-size-default">OUR SERVICES</h1>
                                                                         </div>
                                                                     </div>
                                                                     <div
