--- a/gallery.html
+++ b/gallery.html
@@ -393,7 +393,7 @@
                                                                     >
                                                                         <div class="elementor-widget-container">
                                                                             <div class="elementor-text-editor elementor-clearfix">
-                                                                                <p>4 bedrooms apartment - 190m2 - Terrace</p>
+                                                                                <p>4 bedroom apartment - 190m2 - Terrace</p>
                                                                             </div>
                                                                         </div>
                                                                     </div>
