--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <div class="loader-inner">
         <div id="loader">
           <div class="imgloading-container">
-            <span style="background-image: url(upload/logo.png)"></span>
+            <span style="background-image: url(upload/ImanLogoWhite.png)"></span>
           </div>
           <img
             data-no-lazy="1"
