--- a/WhereTo.html
+++ b/WhereTo.html
@@ -145,8 +145,8 @@
         <div id="loftloader-wrapper" class="pl-imgloading" data-show-close-time="15000" data-max-load-time="0">
             <div class="loader-inner">
                 <div id="loader">
-                    <div class="imgloading-container"><span style="background-image: url(upload/logo.png);"></span></div>
-                    <img data-no-lazy="1" class="skip-lazy" alt="loader image" src="upload/logo.png" />
+                    <div class="imgloading-container"><span style="background-image: url(upload/ImanLogoWhite.png);"></span></div>
+                    <img data-no-lazy="1" class="skip-lazy" alt="loader image" src="upload/ImanLogoWhite.png" />
                 </div>
             </div>
             <div class="loader-section section-fade"></div>
@@ -224,7 +224,7 @@
                             <a href="/our-rooms.html">Services</a>
                           </li>
                            <li class="menu-item">
-                            <a href="/testimonial.html">Where To</a>
+                            <a href="/WhereTo.html">Where To</a>
                           </li>
                           <li class="menu-item menu-item-has-children">
                             <a href="/gallery.html">Rentals in paris</a>
