--- a/index.html
+++ b/index.html
@@ -527,14 +527,8 @@
                                                   class="elementor-widget-container"
                                                 >
                                                   <div class="elementor-image">
-                                                    <img
-                                                      width="422"
-                                                      height="126"
-                                                      src="upload/sign.png"
-                                                      class="attachment-full size-full"
-                                                      alt=""
-                                                      loading="lazy"
-                                                    />
+                                                    <img src="upload/sign.png" class="attachment-full size-full" alt="" loading="lazy" style="height: 25px; width: 100px; object-fit: cover;" />
+
                                                   </div>
                                                 </div>
                                               </div>
