--- a/Services.html
+++ b/Services.html
@@ -304,34 +304,48 @@
           <!-- End top bar -->
 
           <div class="top_bar hasbg">
-            <!-- Begin logo -->
             <div id="logo_wrapper">
               <div id="menu_wrapper">
-                <div id="nav_wrapper">
+                <div id="nav_wrapper" style="margin-right: 20px">
+                  <div id="logo_transparent" class="logo_container">
+                    <div class="logo_align">
+                      <a
+                        id="custom_logo_transparent"
+                        class="logo_wrapper default"
+                        href="index.html"
+                      >
+                        <img
+                          src="upload/logo.png"
+                          alt=""
+                          width="100"
+                          height="40"
+                        />
+                      </a>
+                    </div>
+                  </div>
                   <div class="nav_wrapper_inner">
-                    <div id="menu_border_wrapper">
+                    <div
+                      id="menu_border_wrapper"
+                      style="margin-left: 250px; text-align: center"
+                    >
                       <!-- <a href="javascript:;" id="mobile_nav_icon"><span class="ti-menu"></span></a> -->
                       <div class="menu-main-menu-container">
                         <ul id="main_menu" class="nav">
                           <li class="menu-item">
-                            <a href="/our-rooms.html">Services</a>
+                            <a href="/">about us</a>
                           </li>
                           <li class="menu-item">
-                            <a href="/testimonial.html">Where To</a>
+                            <a href="/Services.html">Services</a>
+                          </li>
+
+                          <li class="menu-item">
+                            <a href="/WhereTo.html">Where To</a>
                           </li>
                           <li class="menu-item menu-item-has-children">
-                            <a href="/gallery.html">Rentals in paris</a>
-                            <ul class="sub-menu">
-                              <li class="menu-item">
-                                <a href="/gallery.html">Rue Marbeuf </a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="/gallery.html">Rue François</a>
-                              </li>
-                              <li class="menu-item">
-                                <a href="/gallery.html">Rue Clément Marot</a>
-                              </li>
-                            </ul>
+                            <a href="/gallery.html">Rentals in Paris</a>
+                          </li>
+                          <li class="menu-item">
+                            <a href="/contect-us.html">Contact us</a>
                           </li>
                         </ul>
                       </div>
@@ -341,43 +355,6 @@
                 <!-- End main nav -->
               </div>
 
-              <!-- Begin right corner buttons -->
-              <!-- <div id="logo_right_button">
-                <div class="header_client_wrapper">
-                  <a>Testimonial</a>
-                </div>
-                <div class="header_call_wrapper"><a>Rent Apartment</a></div>
-              </div> -->
-              <!-- End right corner buttons -->
-
-              <div id="logo_normal" class="logo_container">
-                <div class="logo_align">
-                  <a
-                    id="custom_logo"
-                    class="logo_wrapper hidden"
-                    href="index.html"
-                  >
-                    <img
-                      src="upload/ImanLogoWhite.png"
-                      alt=""
-                      width="180"
-                      height="180"
-                    />
-                  </a>
-                </div>
-              </div>
-
-              <div id="logo_transparent" class="logo_container">
-                <div class="logo_align">
-                  <a
-                    id="custom_logo_transparent"
-                    class="logo_wrapper default"
-                    href="index.html"
-                  >
-                    <img src="upload/logo.png" alt="" width="160" height="60" />
-                  </a>
-                </div>
-              </div>
               <!-- End logo -->
             </div>
           </div>
@@ -502,7 +479,7 @@
                                       </h2>
                                       <h5
                                         style="
-                                          font-size: 18px;
+                                          font-size: 17px;
                                           line-height: 1.6;
                                           color: #faf9f9;
                                           text-align: center;
@@ -1287,56 +1264,7 @@
                         </div>
                       </div>
 
-                      <section>
-                        <div
-                          style="
-                            text-align: center;
-                            margin-bottom: 30px;
-                            margin-top: 50px;
-                          "
-                        >
-                          <h2 style="color: white; margin-bottom: 30px">
-                            Hear What Our Clients Have to Say!
-                          </h2>
-                          <h6 style="color: white; font-style: italic">
-                            "The best concierge in Paris! Iman helped us book a
-                            beautiful apartment near the Champs-Élysées. She
-                            facilitated our access to wonderful dinners, kids'
-                            activities, and responded to all our requests and
-                            more. In addition to being very professional and
-                            helpful, Iman is a beautiful and pleasant person."
-                          </h6>
-
-                          <h5 style="color: rgb(218, 207, 207)">MAISSAM.B</h5>
-                        </div>
-
-                        <div style="text-align: center; margin-bottom: 30px">
-                          <h6 style="color: white; font-style: italic">
-                            "We came with a group of friends for 4 days in Paris
-                            and Iman exceeded all our expectations. From
-                            arranging last-minute reservations in the best
-                            restaurants and night clubs with VIP access, her
-                            personalised attention and efficiency was
-                            impressive. Highly recommended for a stress-free and
-                            high-end experience."
-                          </h6>
-
-                          <h5 style="color: rgb(218, 207, 207)">BARKA.A</h5>
-                        </div>
-
-                        <div style="text-align: center; margin-bottom: 30px">
-                          <h6 style="color: white; font-style: italic">
-                            "Iman made our honeymoon in Paris and Saint-Tropez
-                            unforgettable and beyond our expectations. We felt
-                            incredibly valued and taken care of. Thank you for
-                            everything!"
-                          </h6>
-
-                          <h5 style="color: rgb(218, 207, 207)">
-                            SARAH & RAFA
-                          </h5>
-                        </div>
-                      </section>
+                      <
                     </div>
                   </div>
                 </div>
@@ -1351,15 +1279,6 @@
       <div id="footer_wrapper">
         <div id="footer" class=" ">
           <ul class="sidebar_widget four">
-            <li id="text-3" class="widget widget_text">
-              <h2 class="widgettitle"><span>Our Address</span></h2>
-              <div class="textwidget">
-                <p>
-                  Paris,<br />
-                  France<br />
-                </p>
-              </div>
-            </li>
             <li id="text-4" class="widget widget_text">
               <h2 class="widgettitle"><span>For Booking</span></h2>
               <div class="textwidget">
@@ -1368,6 +1287,35 @@
                   contact@artoflivingbyiman.com
                 </p>
               </div>
+              <a
+                href="https://www.instagram.com/yourprofile"
+                target="_blank"
+                style="text-decoration: none"
+              >
+                <div
+                  style="
+                    width: 40px;
+                    height: 40px;
+                    background-color: #000000;
+                    border-radius: 50%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                  "
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    width="24"
+                    height="24"
+                    fill="#FFFFFF"
+                  >
+                    <path
+                      d="M12 2.2c3.2 0 3.6 0 4.9.1 1.2.1 2 .3 2.6.5.6.2 1 .5 1.5 1 .4.4.7.8 1 1.5.3.6.4 1.4.5 2.6.1 1.3.1 1.7.1 4.9s0 3.6-.1 4.9c-.1 1.2-.3 2-.5 2.6-.2.6-.5 1-.9 1.5-.4.4-.8.7-1.4 1-.6.3-1.4.4-2.6.5-1.3.1-1.7.1-4.9.1s-3.6 0-4.9-.1c-1.2-.1-2-.3-2.6-.5-.6-.2-1-.5-1.5-1-.4-.4-.7-.8-1-1.5-.3-.6-.4-1.4-.5-2.6-.1-1.3-.1-1.7-.1-4.9s0-3.6.1-4.9c.1-1.2.3-2 .5-2.6.2-.6.5-1 .9-1.5.4-.4.8-.7 1.4-1 .6-.3 1.4-.4 2.6-.5 1.3-.1 1.7-.1 4.9-.1m0-2.2C8.7 0 8.2 0 6.9.1c-1.4.1-2.4.3-3.3.7-.9.3-1.6.7-2.4 1.4-.7.7-1.1 1.5-1.4 2.4-.4.9-.6 1.9-.7 3.3C0 8.2 0 8.7 0 12s0 3.8.1 5.1c.1 1.4.3 2.4.7 3.3.3.9.7 1.6 1.4 2.4.7.7 1.5 1.1 2.4 1.4.9.4 1.9.6 3.3.7 1.3.1 1.8.1 5.1.1s3.8 0 5.1-.1c1.4-.1 2.4-.3 3.3-.7.9-.3 1.6-.7 2.4-1.4.7-.7 1.1-1.5 1.4-2.4.4-.9.6-1.9.7-3.3.1-1.3.1-1.8.1-5.1s0-3.8-.1-5.1c-.1-1.4-.3-2.4-.7-3.3-.3-.9-.7-1.6-1.4-2.4-.7-.7-1.5-1.1-2.4-1.4-.9-.4-1.9-.6-3.3-.7-1.3-.1-1.8-.1-5.1-.1zm0 5.8a6.2 6.2 0 1 0 0 12.4 6.2 6.2 0 0 0 0-12.4zm0 10.1a3.9 3.9 0 1 1 0-7.8 3.9 3.9 0 0 1 0 7.8zm6.4-10.8a1.4 1.4 0 1 1 0-2.8 1.4 1.4 0 0 1 0 2.8z"
+                    />
+                  </svg>
+                </div>
+              </a>
             </li>
             <li
               id="mc4wp_form_widget-7"
