--- a/Services.html
+++ b/Services.html
@@ -15,6 +15,13 @@
       type="text/css"
       media="all"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
@@ -29,6 +36,13 @@
       type="text/css"
       media="all"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="css/font-awesome.min.css"
@@ -408,10 +422,7 @@
                                     data-widget_type="heading.default"
                                   >
                                     <div class="elementor-widget-container">
-                                      <h1
-                                        style="text-transform: uppercase"
-                                        class="elementor-heading-title elementor-size-default"
-                                      >
+                                      <h1 class="playfair-display-unique-class">
                                         OUR SERVICES
                                       </h1>
                                     </div>
@@ -473,7 +484,7 @@
                                           font-size: 35px;
                                           text-transform: uppercase;
                                         "
-                                        class="elementor-heading-title elementor-size-default"
+                                        class="playfair-display-unique-class"
                                       >
                                         Private Access
                                       </h2>
@@ -682,7 +693,7 @@
                                           margin-bottom: 30px;
                                           text-transform: uppercase;
                                         "
-                                        class="elementor-heading-title elementor-size-default"
+                                        class="playfair-display-unique-class"
                                       >
                                         Transportation
                                       </h2>
@@ -870,7 +881,7 @@
                                           font-size: 35px;
                                           text-transform: uppercase;
                                         "
-                                        class="elementor-heading-title elementor-size-default"
+                                        class="playfair-display-unique-class"
                                       >
                                         Exclusive Event Ticketing
                                         <h5
@@ -1075,7 +1086,7 @@
                                           font-size: 35px;
                                           text-transform: uppercase;
                                         "
-                                        class="elementor-heading-title elementor-size-default"
+                                        class="playfair-display-unique-class"
                                       >
                                         Other Concierge Service
                                         <h5
@@ -1263,8 +1274,6 @@
                           </div>
                         </div>
                       </div>
-
-                      <
                     </div>
                   </div>
                 </div>
