--- a/gallery.html
+++ b/gallery.html
@@ -161,6 +161,12 @@
         color: #0d0d0e; /* Bullet point color */
       }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
     <meta name="msapplication-TileImage" content="upload/logo_black.png" />
   </head>
 
@@ -426,9 +432,7 @@
                                     data-widget_type="heading.default"
                                   >
                                     <div class="elementor-widget-container">
-                                      <h1
-                                        class="elementor-heading-title elementor-size-default"
-                                      >
+                                      <h1 class="playfair-display-unique-class">
                                         OUR RENTALS IN PARIS
                                       </h1>
                                     </div>
@@ -452,7 +456,7 @@
                                         </p>
                                       </div>
                                       <a
-                                        href="#"
+                                        href="/contect-us.html"
                                         style="
                                           display: inline-block;
                                           padding: 12px 24px;
@@ -511,7 +515,7 @@
                                     <div class="elementor-widget-container">
                                       <h2
                                         style="color: white"
-                                        class="elementor-heading-title elementor-size-default"
+                                        class="playfair-display-unique-class"
                                       >
                                         Avenue Montaigne
                                       </h2>
@@ -536,7 +540,6 @@
                                               luxury brands and trendy
                                               restaurants meet.
                                             </p>
-                                            `
 
                                             <ul>
                                               <li>55 m2</li>
@@ -760,7 +763,7 @@
                                     <div class="elementor-widget-container">
                                       <h2
                                         style="color: white"
-                                        class="elementor-heading-title elementor-size-default"
+                                        class="playfair-display-unique-class"
                                       >
                                         Rue François 1er
                                       </h2>
@@ -1002,7 +1005,7 @@
                                     <div class="elementor-widget-container">
                                       <h2
                                         style="color: white"
-                                        class="elementor-heading-title elementor-size-default"
+                                        class="playfair-display-unique-class"
                                       >
                                         Rue Marbeuf
                                       </h2>
