--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <meta name="format-detection" content="telephone=no" />
 
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="all" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
     <link
       rel="stylesheet"
       href="css/wordpress.css"
@@ -406,7 +410,7 @@
                           </div>
                         </div>
                       </section>
-                      <h1>About us</h1>
+                      <h1 class="playfair-display-unique-class">About us</h1>
                       <section
                       style="background-color:black ; color: white;"
                         class="elementor-section elementor-top-section elementor-element elementor-element-65db93bf elementor-section-stretched elementor-section-full_width elementor-section-height-default elementor-section-height-default"
@@ -574,7 +578,7 @@
                       </section>
                          
                 <div style="text-align: center;  background-color: black;">
-                  <h2 style="color: white;">
+                  <h2 style="color: white;" class="playfair-display-unique-class">
                       Hear What Our Clients Have to Say!
                   </h2>
               </div>
