--- a/WhereTo.html
+++ b/WhereTo.html
@@ -134,7 +134,10 @@
       type="text/css"
       media="all"
     />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="upload/logo_black.png" sizes="32x32" />
     <link rel="icon" href="upload/logo_black.png" sizes="192x192" />
     <link rel="apple-touch-icon" href="upload/logo_black.png" />
@@ -306,7 +309,7 @@
                                                                         data-widget_type="heading.default"
                                                                     >
                                                                         <div class="elementor-widget-container">
-                                                                            <h1 style="text-transform:uppercase ;" class="elementor-heading-title elementor-size-default">Our Service Locations</h1>
+                                                                            <h1  class="playfair-display-unique-class">Our Service Locations</h1>
                                                                         </div>
                                                                     </div>
                                                                     <div
