--- a/contect-us.html
+++ b/contect-us.html
@@ -17,6 +17,10 @@
       type="text/css"
       media="all"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
     <link
@@ -366,7 +370,7 @@
             </div>
                   
 			<div class="container" style="margin-top: 120px;">
-              <h1> Contact us </h1>
+              <h1 class="playfair-display-unique-class"> Contact us </h1>
               <form action="#">
                 <label for="fname">Last name</label>
                 <input type="text" id="fname" name="firstname" placeholder="Your name.." />
