--- a/gallery.html
+++ b/gallery.html
@@ -202,189 +202,27 @@
     </div>
 
     <div id="perspective">
-      <input
-        type="hidden"
-        id="pp_menu_layout"
-        name="pp_menu_layout"
-        value="centeralign2"
-      />
-      <input
-        type="hidden"
-        id="pp_enable_right_click"
-        name="pp_enable_right_click"
-        value=""
-      />
-      <input
-        type="hidden"
-        id="pp_enable_dragging"
-        name="pp_enable_dragging"
-        value=""
-      />
-      <input
-        type="hidden"
-        id="pp_image_path"
-        name="pp_image_path"
-        value="images/"
-      />
-      <input
-        type="hidden"
-        id="pp_homepage_url"
-        name="pp_homepage_url"
-        value="index.html"
-      />
-      <input type="hidden" id="pp_fixed_menu" name="pp_fixed_menu" value="" />
-      <input
-        type="hidden"
-        id="tg_sidebar_sticky"
-        name="tg_sidebar_sticky"
-        value="1"
-      />
-      <input type="hidden" id="pp_topbar" name="pp_topbar" value="" />
-      <input
-        type="hidden"
-        id="post_client_column"
-        name="post_client_column"
-        value="4"
-      />
-      <input type="hidden" id="pp_back" name="pp_back" value="Back" />
-      <input
-        type="hidden"
-        id="tg_lightbox_thumbnails"
-        name="tg_lightbox_thumbnails"
-        value="thumbnail"
-      />
-      <input
-        type="hidden"
-        id="tg_lightbox_thumbnails_display"
-        name="tg_lightbox_thumbnails_display"
-        value="1"
-      />
-      <input
-        type="hidden"
-        id="tg_lightbox_timer"
-        name="tg_lightbox_timer"
-        value="7000"
-      />
-      <input
-        type="hidden"
-        id="tg_header_content"
-        name="tg_header_content"
-        value="menu"
-      />
-
-      <input
-        type="hidden"
-        id="tg_live_builder"
-        name="tg_live_builder"
-        value="0"
-      />
-
-      <input
-        type="hidden"
-        id="pp_footer_style"
-        name="pp_footer_style"
-        value="4"
-      />
-
-      <!-- Begin mobile menu -->
-      <a id="close_mobile_menu" href="javascript:;"></a>
-
-      <div class="mobile_menu_wrapper">
-        <div class="mobile_menu_content">
-          <div class="menu-side-mobile-menu-container">
-            <ul id="mobile_main_menu" class="mobile_main_nav">
-              <li
-                class="menu-item menu-item-home current-menu-item current_page_item"
-              >
-                <a href="index.html" aria-current="page">Home</a>
-              </li>
-              <li class="menu-item"><a href="our-rooms.html">Our Rooms</a></li>
-              <li class="menu-item"><a href="about-us.html">About Us</a></li>
-              <li class="menu-item"><a href="contact.html">Contact us</a></li>
-              <li class="menu-item">
-                <a href="offer-package.html">Offer &#038; Package</a>
-              </li>
-              <li class="menu-item">
-                <a href="testimonial.html">Testimonial</a>
-              </li>
-              <li class="menu-item"><a href="our-menus.html">Restaurant</a></li>
-              <li class="menu-item"><a href="blog.html">Blog</a></li>
-              <li class="menu-item"><a href="explore.html">Explore</a></li>
-              <li class="menu-item">
-                <a href="terms-and-conditions.html">Terms and Conditions</a>
-              </li>
-              <li class="menu-item"><a href="gallery.html">Gallery</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- End mobile menu -->
-      <!-- Begin template wrapper -->
       <div
         style="background-color: black; color: white"
         id="wrapper"
         class="hasbg transparent"
       >
-        <div class="header_style_wrapper">
-          <!-- End top bar -->
+        <div class="topnav" id="myTopnav">
+          <a href="/" class="active" style="margin-left: 20px">
+            <img src="upload/logo.png" alt="" width="100" height="40"
+          /></a>
 
-          <div class="top_bar hasbg">
-            <div id="logo_wrapper">
-              <div id="menu_wrapper">
-                <div id="nav_wrapper" style="margin-right: 20px">
-                  <div id="logo_transparent" class="logo_container">
-                    <div class="logo_align">
-                      <a
-                        id="custom_logo_transparent"
-                        class="logo_wrapper default"
-                        href="index.html"
-                      >
-                        <img
-                          src="upload/logo.png"
-                          alt=""
-                          width="100"
-                          height="40"
-                        />
-                      </a>
-                    </div>
-                  </div>
-                  <div class="nav_wrapper_inner">
-                    <div
-                      id="menu_border_wrapper"
-                      style="margin-left: 250px; text-align: center"
-                    >
-                      <!-- <a href="javascript:;" id="mobile_nav_icon"><span class="ti-menu"></span></a> -->
-                      <div class="menu-main-menu-container">
-                        <ul id="main_menu" class="nav">
-                          <li class="menu-item">
-                            <a href="/">about us</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="/Services.html">Services</a>
-                          </li>
+          <a href="/" class="about-us-link">about us</a>
 
-                          <li class="menu-item">
-                            <a href="/WhereTo.html">Where To</a>
-                          </li>
-                          <li class="menu-item menu-item-has-children">
-                            <a href="/gallery.html">Rentals in Paris</a>
-                          </li>
-                          <li class="menu-item">
-                            <a href="/contect-us.html">Contact us</a>
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- End main nav -->
-              </div>
-
-              <!-- End logo -->
-            </div>
-          </div>
+          <a href="/Services.html">Services</a>
+          <a href="/WhereTo.html">Where To</a>
+          <a href="/gallery.html">Rentals in Paris</a>
+          <a href="/contect-us.html">Contact us</a>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+          </a>
         </div>
-        <!-- Begin content -->
+
         <div
           style="background-color: black"
           id="page_content_wrapper"
@@ -462,6 +300,7 @@
                                           padding: 12px 24px;
                                           background-color: #101113;
                                           color: white;
+
                                           text-decoration: none;
                                           border-radius: 20px;
                                           box-shadow: 0 4px 8px
@@ -1395,6 +1234,16 @@
       src="js/plugins/masonry.min.js?ver=4.2.2"
       id="masonry-js"
     ></script>
+    <script>
+      function myFunction() {
+        var x = document.getElementById("myTopnav");
+        if (x.className === "topnav") {
+          x.className += " responsive";
+        } else {
+          x.className = "topnav";
+        }
+      }
+    </script>
     <script
       type="text/javascript"
       src="js/plugins/hoteller-elementor/assets/js/jquery.lazy.js"
